--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     ports:
       - "5678:5678"
     volumes:
-      - "C:/Users/Administrador/n8n-random/.n8n:/home/node/.n8n"
+      - ./\.n8n:/home/node/.n8n
     depends_on:
       - postgres
 
